2001-11-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNumber.m: describe char and unsigned char as numbers
	rather than ascii characters.  Use g format for floats.
	Use 'true' and 'false' for boolean output ... for MacOS-X compatibility.
	* Source/NSConcreteNumber.m: ditto
	* Source/GSFormat.m: Fix bug in formatting short integers - was trying
	to treat them as full sized.
	* headers/Foundation/NSString.h: Fix error in initWithFormat:locale:,...
	* Source/NSString.m: ditto ... was missing varargs
	* Documentation/gsdoc/NSNumber.gsdoc: document changes.
	* Documentation/gsdoc/NSString.gsdoc: document changes.
	* Testing/values.m: Added some number output tests.
	* Source/NSUserDefaults.m: Locking bug fixed ... was locking before
	lock had been created.
	* Source/libgnustep-base.def: Removed defunct class
	* Source/NSHost.m: Support initialisation with an address for which
	there is no corrsponding host name.

2001-11-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/gsdoc/Base.gsdoc:
	* Source/GSCompatibility.m:
	* Source/GSMime.m:
	* Source/GSUserDefaults.h:
	* Source/NSArray.m:
	* Source/NSCalendarDate.m:
	* Source/NSDate.m:
	* Source/NSDecimalNumber.m:
	* Source/NSDictionary.m:
	* Source/NSFileHandle.m:
	* Source/NSGeometry.m:
	* Source/NSLog.m:
	* Source/NSScanner.m:
	* Source/NSString.m:
	* Source/NSUserDefaults.m: Modify user defaults usage to cache some
	defaults used internally and provide private accessors for speed.
	Add default to force logging to be done via syslog since logging
	to stderr within code called via JIGS from a servlet engine may
	cause severe problems if the servlet engine is using descriptor 2
	for other purposes.

2001-11-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSMime.m: modifications made to support HTTP continuation
	responses for buggy webservers which send them when they shouldn't.

2001-11-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSHTTPHURLHandle.m: handle writing of nil properties and