@@ -61,7 +61,7 @@ GSSetUserName(NSString* name)
   else if ([theUserName isEqualToString: name] == NO)
     {
       ASSIGN(theUserName, name);
-      [NSUserDefaults resetUserDefaults];
+      [NSUserDefaults resetStandardUserDefaults];
     }
 }
 
