@@ -1,3 +1,12 @@
+2001-11-13  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSUser.m:
+	* Headers/Foundation/NSUserDefaults.h:
+	* Documentation/gsdoc/NSUserDefaults.gsdoc:
+	* Source/NSUserDefaults.m: Changed the method name +resetUserDefaults
+	to be +resetStandardUserDefaults for compatibility with MacOS-X, which
+	has now implemented an equivalent for the GNUstep method.
+
 2001-11-12  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSNumber.m: describe char and unsigned char as numbers
